--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,9 @@
-@import "reset";
 @import "general-styles-variables";
-@import "animations";
 @import "navigation";
 @import "footer";
 @import "home";
+@import "info";
+@import "habilidades";
+@import "portfolio";
+@import "contacto";
+
