--- a/scss/_general-styles-variables.scss
+++ b/scss/_general-styles-variables.scss
@@ -48,9 +48,12 @@
 }
 
 /**************************GENERAL STYLES****************************/
-h1 {
-    font-size: 50px;
+@mixin H1title{
+	font-size: 50px;
     font-weight: 400;
+}
+h1 {
+    @include H1title;
 }
 
 h2 {
@@ -66,25 +69,27 @@ img {
     width: 100%;
 }
 
-$background1: black;
-$background2: #373a41;
-$fontColor1: #ffcd1c;
-$fontColor2: white;
-$space: 100px;
+$principales: (
+    background1: black,
+    background2: #373a41,
+    fontColor1: #ffcd1c,
+    fontColor2: white,
+    space: 100px
+);
 
 .background1 {
-    background-color: $background1;
+    background-color: map-get($principales , background1);
 }
 .background2 {
-    background-color: $background2;
+    background-color: map-get($principales , background2);
 }
 
 .fontColor1 {
-    color: $fontColor1;
+    color: map-get($principales , fontColor1);
 }
 
 .fontColor2 {
-    color: $fontColor2;
+    color: map-get($principales , fontColor2);
 }
 
 .flex {
