add sass extend in home page

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -4,6 +4,7 @@
 }
 
 .last {
+    @extend .content;
     padding-bottom: map-get($principales , space);
 }
 /**************************HOME TABLET****************************/
