--- a/styles/styles.css
+++ b/styles/styles.css
@@ -141,7 +141,7 @@ footer {
   footer img {
     width: 36px;
     height: 36px; }
-  footer .content {
+  footer .content, footer .last {
     padding-top: 50px; }
   footer .copy {
     margin-top: 30px;
@@ -149,7 +149,7 @@ footer {
     font-weight: 100; }
 
 /**************************HOME****************************/
-.content {
+.content, .last {
   padding-top: 100px; }
 
 .last {
